[package]
name = "ram-check-egui"
version = "1.0.1"
edition = "2024"
authors = ["noname-th"]

[dependencies]
eframe = "*"
egui = "0.33.3"

[dependencies.windows]
version = "0.58.0"
features = ["Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging"
]

[build-dependencies]
winres = "0.1.12"
